@@ -1,0 +1,19 @@
+# Information in LiteSQL for 'pkg-config'
+
+# Written by Eric A. McDonald for the LiteSQL project.
+# LiteSQL is by Tero Laitinen.
+# See LICENSE for copyright information.
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+includedir=@includedir@
+libdir=@libdir@
+
+Name: LiteSQL
+Description: Persistent Object Framework for C++
+Version: @PACKAGE_VERSION@
+URL: http://litesql.sourceforge.net
+@pkg_config_reqs_tv@
+Libs: -L${libdir} -llitesql @PGSQL_LDFLAGS@ @PGSQL_LIBS@ @MYSQL_LIBS@
+Cflags: -I${includedir} @PGSQL_CXXFLAGS@ @MYSQL_CXXFLAGS@
+
